MAINTAINERCLEANFILES =	Makefile.in tmispell.1 tmispell.1.in \
	tmispell.en.html tmispell.en.txt tmispell.en.1.in tmispell.en.1 \
	tmispell.fi.html tmispell.fi.txt tmispell.fi.1.in tmispell.fi.1

SUBDIRS=sgml

DOCBOOK_TO_MAN=docbook-to-man

man_MANS=tmispell.1

EXTRA_DIST=\
	tmispell.1.in \
	tmispell.en.1.in tmispell.fi.1.in \
	tmispell.en.html tmispell.fi.html \
	doc.xslt
